fixed the claim box overlapping

--- a/themes/nab-amplify/assets/css/block-front.css
+++ b/themes/nab-amplify/assets/css/block-front.css
@@ -241,6 +241,7 @@
 .ui-widget{font-family:'Open Sans', Arial, sans-serif}
 #tabs .community-curator-header{padding:0 30px}
 .banner-header+.container .featured-block-wraper:first-child{margin-top:60px}
+.company-claim-box+.container .site-main > div:first-child{margin-top:0!important}
 
 /* media css */
 
